syntax = "proto3";
package serviceWay;

message OrderRequest{
  string orderId = 1;
  int64 timeStamp = 2;
}

message OrderResponse{
  string OrderId = 1;
  string OrderName = 2;
  string OrderStatus = 3;
}

// 想要通过gRPC框架进行远程服务调用，首先第一步应该是要有服务

// 服务接口的定义  服务接口的返回值使用了stream进行修饰 通过stream修饰的方式表示该接口调用时，服务端会以数据流的形式将数据返回给客户端
service OrderService{
  rpc GetOrderInfo(OrderRequest)returns(stream OrderResponse){};  //服务端流模式
}
